# sdeval

./: .gitignore  CHANGELOG.md  COMPLETED_TASKS.md  README.md  check_kanaon.py  check_kanaon2.py  evaluate_adult_11th.py  evaluate_bulk.py  evaluation_document.md  example_constraint_evaluation.py  example_evaluation.py  files.csv  plan.md  pyproject.toml  run_privacy_eval.sh  test_configs.py  visualization.py
.github/workflows/: monthly_tests.yml  tests.yml
configs/: README.md  adult.json  adult_plausibility.json  adult_with_dp.json  beijing.json  default.json  diabetes.json  news.json  privacy_eval.json  shopper.json
datasets/: info.txt
datasets/adult/: bin_info.json  info.json  test.csv
datasets/default/: info.json  test.csv
datasets/diabetes/: info.json  test.csv
datasets/news/: info.json
datasets/news_nocat/: info.json  test.csv
sdeval/: __init__.py  cli.py  config.py  data_loader.py  evaluate_bulk.py  evaluator.py  main.py  visualization.py
sdeval/dp/: __init__.py  basic_mechanisms.py  cdp2adp.py  cli.py
sdeval/metrics/: __init__.py  constraints.py  coverage.py  dp.py  ml_efficacy.py  plausibility.py  (+3 more)
synthetic/: guided_samples_age_40.02_40.02_0.1.csv  guided_samples_age_40.0_40.0_0.1.csv  guided_samples_workclass_State-gov_education_Bachelors_0.01.csv  tabdiff_adult_education_11th.csv
tests/: __init__.py  test_constraint_metrics.py  test_coverage_metrics.py  test_data_loader.py  test_dp_cli.py  test_dp_mechanisms.py  test_integration.py  test_privacy_metrics.py  test_statistical_alpha_beta.py  test_statistical_metrics.py  test_visualization.py
(+3 files in other folders)
